# mc_pepper

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: Config.cmake.in
src/: config.h.in  pepper.cpp  pepper.h
src/constraints/: BoundedAccelerationConstr.cpp  BoundedAccelerationConstr.h
src/devices/: Speaker.cpp  Speaker.h  TouchSensor.cpp  TouchSensor.h  VisualDisplay.cpp  VisualDisplay.h
src/sensors/: Speaker.cpp  Speaker.h  TouchSensor.cpp  TouchSensor.h  VisualDisplay.cpp  VisualDisplay.h
src/tasks/: CoMRelativeBodyTask.cpp  CoMRelativeBodyTask.h
